2015-07-08 Franz Holzinger <franz@ttproducts.de>
	* bug fix: select box id must use the field name as a part of it
	* bug fix: do not clear the session password for autologin on create
	* change: do not exit in the inside of the login function
	* fix bug #67629: RSA authentification for TYPO3 6.2

2015-05-20 Franz Holzinger <franz@ttproducts.de>
	* bug fix: invite must set enableAutoLoginOnInviteConfirmation for auto login

2015-05-15 Franz Holzinger <franz@ttproducts.de>
	* bug fix: no PHP warning message for wrong array indices - illegal string offset
	* add method generateHash to generate a hash from a parameter array
	* bug fix: invite and delete

2015-04-30 Franz Holzinger <franz@ttproducts.de>
	* bug #65141: workaround for the EM in the TYPO3 backend

2015-04-21 Franz Holzinger <franz@ttproducts.de>
	* bug fix: wrong call for hook registrationProcess_beforeSaveDelete
	* bug fix: the original internal array must never be changeable

2015-02-28 Franz Holzinger <franz@ttproducts.de>
	* security fix: do not allow the edit command if the logged in FE user uid does not equal the hidden field FE[fe_users][uid]

2014-12-27 Franz Holzinger <franz@ttproducts.de>
	* incorporate modifications until sr_feuser_register 3.1.3

2014-08-17 Franz Holzinger <franz@ttproducts.de>
	* changes in the hook functions
	* support for improved voucher codes of voucher extension 0.2.0
	* make authorisation services configurable authServiceClass
	* add table sys_agency_fe_users_limit_fe_groups to store a FE user specific start- and endtime for an assigned FE user group (added by the voucher extension).
	* add a scheduler task to check if a FE user must be removed from a FE group membership (voucher extension)

2014-03-06 Franz Holzinger <franz@ttproducts.de>
	* fix bug #50838
	* fix bug with not shown Direct Mail categories
	* modify module_sys_dmail_category in the TCE to show all categories
	for all countries

2014-02-15 Franz Holzinger <franz@ttproducts.de>