@@ -1,3 +1,7 @@
+2015-07-17 Franz Holzinger <franz@ttproducts.de>
+	* bug fix: forgotten parameter 2 for method addPasswordTransmissionMarkers
+	* change: set uploadFolder to fileadmin/user_uploads for TYPO3 6.2
+
 2015-07-08 Franz Holzinger <franz@ttproducts.de>
 	* bug fix: select box id must use the field name as a part of it
 	* bug fix: do not clear the session password for autologin on create
